fix divs overlapping (max-height)

--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -4,13 +4,6 @@
   flex-direction: row;
 }
 
-.contact__background {
-  background-color: #59b256;
-  height: 100%;
-  width: 20px;
-  position: absolute;
-}
-
 .contact__wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
