--- a/src/css/intro.css
+++ b/src/css/intro.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+.container{
+    display: flex;
+    flex-direction: column;
+}
 .content__wrapper {
 height: 100vh;
 display: flex;
